added db context and connected to azure sql database server

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:productsdatabase.database.windows.net,1433;Initial Catalog=Products;Persist Security Info=False;User ID=testdb;Password=test@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "AllowedHosts": "*"
 }
