--- a/.github/workflows/master_dotnet-sql.yml
+++ b/.github/workflows/master_dotnet-sql.yml
@@ -20,17 +20,15 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
-      - name: dir
-        run: dir
+   
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-     
       - name: dir
         run: dir
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}\myapp
+        run: dotnet AngularWebApi.sln publish -c Release -o ${{env.DOTNET_ROOT}}\myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
