--- a/.github/workflows/master_dotnet-sql.yml
+++ b/.github/workflows/master_dotnet-sql.yml
@@ -28,7 +28,7 @@ jobs:
         run: dir
 
       - name: dotnet publish
-        run: dotnet AngularWebApi.sln publish -c Release -o ${{env.DOTNET_ROOT}}\myapp
+        run: dotnet publish AngularWebApi.sln -c Release -o ${{env.DOTNET_ROOT}}\myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
