--- a/.github/workflows/master_dotnet-sql.yml
+++ b/.github/workflows/master_dotnet-sql.yml
@@ -28,13 +28,13 @@ jobs:
         run: dir
 
       - name: dotnet publish
-        run: dotnet publish AngularWebApi.sln -c Release -o ${{env.DOTNET_ROOT}}\myapp
+        run: dotnet publish AngularWebApi.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}\myapp
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
     runs-on: windows-latest
