--- a/.github/workflows/master_dotnet-sql.yml
+++ b/.github/workflows/master_dotnet-sql.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -22,7 +22,7 @@ jobs:
           dotnet-version: '8.x'
    
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build AngularWebApi.csproj --configuration Release
 
       - name: dir
         run: dir
