Added packages and db context

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:angularappdev.database.windows.net,1433;Initial Catalog=DEV_UI;Persist Security Info=False;User ID=devuser;Password=AngularDev123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  },
+    "DefaultConnection": "Server=tcp:acsfullstack.database.windows.net,1433;Initial Catalog=DEV_UI;Persist Security Info=False;User ID=devuser;Password=acsuser@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },  
   "AllowedHosts": "*"
 }
