--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -20,6 +20,16 @@
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7193;http://localhost:5128"
     },
+    "localdb": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Local"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7193;http://localhost:5128"
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
