--- a/.github/workflows/master_dotnet-sql.yml
+++ b/.github/workflows/master_dotnet-sql.yml
@@ -1,9 +1,9 @@
 name: Deploy 🚀
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["API Master Status Check 🤠"]
+    types: [completed]
   workflow_dispatch:
 
 jobs:
