--- a/.github/workflows/api_pre_master_merge_status_check.yml
+++ b/.github/workflows/api_pre_master_merge_status_check.yml
@@ -12,6 +12,7 @@ on:
 env:
   MAJOR: ${{ vars.MAJOR }}
   MINOR: ${{ vars.MINOR }}
+  BRANCH: fromJSON('[github.ref, github.head_ref]')[github.event_name == 'pull_request']
 jobs:
   # This workflow contains a job called "Trigger Jenkins"
   status_check:
@@ -28,7 +29,7 @@ jobs:
           timeout: "600"
           interval: "30"
           api_token: ${{ secrets.JENKINS_TOKEN }}
-          parameters: '{"Branch_Name":"${{github.head_ref}}","MAJOR":"${{env.MAJOR}}","MINOR":"${{env.MINOR}}"}'
+          parameters: '{"Branch_Name":"${{env.BRANCH}}","MAJOR":"${{env.MAJOR}}","MINOR":"${{env.MINOR}}"}'
       - name: Get job url
         run: echo "Job url is ${{ steps.jenkins.outputs.build_url }}"
       - name: Split Build Number From Job URL
@@ -52,7 +53,7 @@ jobs:
         with:
           token: ${{secrets.GITHUB_TOKEN}}
           tag_name: v${{env.MAJOR}}.${{env.MINOR}}.${{ steps.calc.outputs.minus }}
-          target_commitish: ${{github.ref}}
-          name: "${{github.ref}} v${{env.MAJOR}}.${{env.MINOR}}.${{ steps.calc.outputs.minus }}"
+          target_commitish: ${{env.BRANCH}}
+          name: "${{env.BRANCH}} v${{env.MAJOR}}.${{env.MINOR}}.${{ steps.calc.outputs.minus }}"
           body: "This Release was created through github actions"
           prerelease: true
