Updated Jenkins URL

--- a/.github/workflows/api_pre_master_merge_status_check.yml
+++ b/.github/workflows/api_pre_master_merge_status_check.yml
@@ -23,10 +23,10 @@ jobs:
         uses: joshlk/jenkins-githubaction@master
         id: jenkins
         with:
-          url: "http://binarybug-jenkins.centralindia.cloudapp.azure.com:8080/"
+          url: "http://jenkins-binary.centralindia.cloudapp.azure.com:8080/"
           job_name: "piggy_api_pre_deploy_check"
           username: "binarybug"
-          timeout: "600"
+          timeout: "300"
           interval: "30"
           api_token: ${{ secrets.JENKINS_TOKEN }}
           parameters: '{"Branch_Name":"${{github.ref}}","MAJOR":"${{env.MAJOR}}","MINOR":"${{env.MINOR}}"}'
@@ -66,10 +66,10 @@ jobs:
         uses: joshlk/jenkins-githubaction@master
         id: jenkins
         with:
-          url: "http://binarybug-jenkins.centralindia.cloudapp.azure.com:8080/"
+          url: "http://jenkins-binary.centralindia.cloudapp.azure.com:8080/"
           job_name: "piggy_api_pre_deploy_check"
           username: "binarybug"
-          timeout: "600"
+          timeout: "300"
           interval: "30"
           api_token: ${{ secrets.JENKINS_TOKEN }}
           parameters: '{"Branch_Name":"refs/heads/${{github.head_ref}}","MAJOR":"${{env.MAJOR}}","MINOR":"${{env.MINOR}}"}'
