--- a/.github/workflows/master-status-check.yml
+++ b/.github/workflows/master-status-check.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Trigger jenkins reset-job-build-number job
         uses: joshlk/jenkins-githubaction@master
         with:
-          url: "http://binarybug-jenkins.centralindia.cloudapp.azure.com:8080/"
+          url: "http://jenkins-binary.centralindia.cloudapp.azure.com:8080/"
           job_name: "Reset-Job-Build-Number"
           username: "binarybug"
           timeout: "10"
@@ -39,10 +39,10 @@ jobs:
         uses: joshlk/jenkins-githubaction@master
         id: jenkins
         with:
-          url: "http://binarybug-jenkins.centralindia.cloudapp.azure.com:8080/"
+          url: "http://jenkins-binary.centralindia.cloudapp.azure.com:8080/"
           job_name: "piggy_api_pre_deploy_check"
           username: "binarybug"
-          timeout: "600"
+          timeout: "300"
           interval: "30"
           api_token: ${{ secrets.JENKINS_TOKEN }}
           parameters: '{"Branch_Name":"${{github.ref}}","MAJOR":"${{env.MAJOR}}","MINOR":"${{steps.minor.outputs.plus}}"}'
