update solution, proj file and sql conn strings

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:piggy.database.windows.net,1433;Initial Catalog=PIGGY_UI;Persist Security Info=False;User ID=piggyadmin;Password=Admin@piggy123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=90;",
+    "DefaultConnection": "Server=tcp:piggy.database.windows.net,1433;Initial Catalog=piggy-db;Persist Security Info=False;User ID=sqladminuser;Password=SuperSecurePassword123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=90;",
     "LocalDB": "Server=(localdb)\\MSSQLLocalDB;database=LOCAL_PIGGY_UI;Trusted_Connection=true"
   },
   "AllowedHosts": "*",
